
	* test/unittest/tracemem/err.D_TRACEMEM_ADDR.badaddr.d: Note
	not yet fixed.

	* test/unittest/tracemem/tst.rootvp.d: renamed to...
	* test/unittest/tracemem/tst.init_task.d: ... this, and
	`rootvp -> `init_task.  No longer XFAIL.

	* test/unittest/types/err.D_CAST_INVAL.badcast.d: Cast to struct
	task_struct rather than char, testing struct type lookup.
	`kmem_flags -> `max_pfn.

	Miscellaneous makefile work.

	* GNUmakefile: Install libraries to lib64, not lib.
	* dtrace-utils.spec: Likewise.

2012-07-25  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_module.c (dt_module_getctf): Drop dtrace_ctf
	hardwiring.

2012-07-24  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_pcb.h (pcb_sou_type): New.
	* libdtrace/dt_lex.l: Use it to track certain-to-be-types in the
	type slot of structs, unions, and enums.

	* libdtrace/dt_grammar.y (struct_or_union_specifier): Remove
	DT_TOK_IDENT rule: no longer required.
	(struct_or_union_definition): Likewise.

	* libdtrace/Build (libdtrace-build_SRCDEPS): Remove.
	(dt_grammar.[chy]): Make into a %.y-origin pattern rule, to get
	the dependency graph correct and prevent .d-file overwriting
	corrupting dependencies.

	* LICENSE: Fix copyright date.

	* README: We have CTF now.

	* dt_impl.h: Tiny layout fix.
	* dt_module.c (dt_module_getctf): Remove extraneous braces.
	* dt_open.c (dtrace_close): Don't leak the dt_ctf_elf handle.

2012-07-23  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_subr.c (dt_printf): Don't call vsnprintf() multiple
	times in a given va_start/va_end round.
	* COMMANDLINE-OPTIONS: Document that -B works.

	* libdtrace/dt_module.c (dt_module_load): Fix flipped failure case
	in module loading.
	(dt_module_getctf): Only try to load the module if it's not
	already loaded: try to load it before checking CTF state.
	(dt_module_shuffle_to_start): New function.
	(dtrace_update): Call it.

	* libdtrace/dt_open.c (dt_vopen): Shuffle the C and D modules to