@@ -24,6 +24,8 @@
  * Use is subject to license terms.
  */
 
+/* @@xfail: not yet ported */
+
 interrupt-start
 {
 	self->ts = vtimestamp;
