@@ -1,1 +1,0 @@
-@@xfail: sdt provider not yet implemented
